#2 #10 добавлены иконки и логотипы, работа с версткой, новости и анонсы сведены в один раздел

--- a/FCGagarin.WebUI/Views/News/News.cshtml
+++ b/FCGagarin.WebUI/Views/News/News.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FCGagarin.WebUI.ViewModels.NewsViewModel>
 
 @{
-    ViewBag.Title = "Новости";
+    ViewBag.Title = "Новости и анонсы";
 }
 
 @if (User.Identity.IsAuthenticated) //TODO: заменить на проверку роли
