--- a/FCGagarin.WebUI/Content/Site.css
+++ b/FCGagarin.WebUI/Content/Site.css
@@ -84,8 +84,7 @@ aside > div {
     width:100%;
 }*/
 body {
-    /*padding-top: 55px;*/
-    padding-bottom: 20px;
+    padding-top: 60px;
 }
 
 textarea{
@@ -94,4 +93,46 @@ textarea{
 
 .plus{ 
     margin-bottom: 10px;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 130px;
+}
+
+/*.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+  height: 120px;
+  background-color: #3e444c;
+}*/
+
+.footer{
+    background-color: #3e444c;
+}
+
+body > .container {
+  padding: 120px;
+}
+.container .text-muted {
+  margin: 40px 0px 10px 0px;
+}
+
+/*.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}*/
+
+/*code {
+  font-size: 80%;
+}*/
+#copyright{
+    margin:50px 0px 0px 0px;
 }
