--- a/FCGagarin.WebUI/Views/News/Delete.cshtml
+++ b/FCGagarin.WebUI/Views/News/Delete.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayNameFor(m => m.Author):  @Html.DisplayFor(modelItem => Model.Author)
         </div>
     </div>
-    <h5><span class="label label-danger">Удаляем эту новость, вы уверены?</span></h5>
+    <h5><span class="label label-danger">Удаляем новость, уверены?</span></h5>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
