--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -51,8 +51,8 @@
                             <li role="presentation" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Галерея</a>
                                 <ul class="dropdown-menu">
-                                    <li class="disabled">@Html.ActionLink("Фото", "Index", "Photo")</li>
-                                    <li class="disabled">@Html.ActionLink("Видео", "Index", "Video")</li>
+                                    <li class="disabled">@Html.ActionLink("Фото", "Index", "PhotoAlbum")</li>
+                                    <li>@Html.ActionLink("Видео", "Index", "VideoAlbum")</li>
                                 </ul>
                             </li>
                         </ul>
