--- a/FCGagarin.WebUI/Views/VideoAlbum/Index.cshtml
+++ b/FCGagarin.WebUI/Views/VideoAlbum/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<FCGagarin.WebUI.ViewModels.NewsViewModel>
+﻿@model IEnumerable<FCGagarin.WebUI.ViewModels.VideoAlbumViewModel>
 
 @{
-    ViewBag.Title = "Новости и анонсы";
+    ViewBag.Title = "Видеоальбомы";
 }
 
 @if (User.IsInRole("Moderator"))
@@ -11,32 +11,27 @@
 
 @foreach (var item in Model)
 {
-    <div class="jumbotron">
-        <h4 class="well well-lg">@Html.DisplayFor(modelItem => item.Title)</h4>
-        <div class="h5">
-            @Html.Raw(item.Text)
+    <div class="well">
+        <div class="h4">
+            @Html.ActionLink(item.Name, "Details", new { id = item.Id })
         </div>
         <div class="text-muted h6">
             <div>
-                @Html.DisplayNameFor(m => m.CreateDate):  @Html.DisplayFor(modelItem => item.CreateDate)
+                @Html.DisplayNameFor(m => m.NumberOfVideo):  @Html.DisplayFor(m => item.NumberOfVideo)
             </div>
             <div>
-                @Html.DisplayNameFor(m => m.Author):  @Html.DisplayFor(modelItem => item.Author)
+                @Html.DisplayNameFor(m => m.LastUploadDate):  @Html.DisplayFor(m => item.LastUploadDate)
             </div>
         </div>
         @if (User.IsInRole("Moderator"))
         {
-            <p>
+            <span>
                 @Html.ActionLink(" ", "Edit", new { id = item.Id }, new { @class = "btn btn-default fa fa-pencil fa-lg" }) |
                 @Html.ActionLink(" ", "Delete", new { id = item.Id }, new { @class = "btn btn-default fa fa-trash-o fa-lg" })
-            </p>
+            </span>
         }
     </div>
 }
-
-
-
-
 
 
 
