--- a/FCGagarin.WebUI/Views/News/Create.cshtml
+++ b/FCGagarin.WebUI/Views/News/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Добавление новости";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -26,31 +26,40 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                Выберите файл <input type="file" name="Image" />
+                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
         @* TODO: закончить с заливкой фотографий для новостей *@
 
         @*<form action="/api/upload" enctype="multipart/form-data">
-            <div class="row fileupload-buttonbar">
-                <div class="panel panel-default">
-                    <div class="panel-body">
+                <div class="row fileupload-buttonbar">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
 
 
-                        <i class="fa fa-plus fa-lg"></i><span>&nbsp;&nbsp;Выбрать файлы...</span>
-                        <input type="file" id="fileupload" name="fileupload" accept="image/*" multiple="multiple">
-                        <button id="btnUploadAll" class="btn btn-success pull-right" type="button">
-                            Загрузить все файлы
-                        </button>
-                        <div class="clearfix">
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" id="overallbar" style="width: 0%">
+                            <i class="fa fa-plus fa-lg"></i><span>&nbsp;&nbsp;Выбрать файлы...</span>
+                            <input type="file" id="fileupload" name="fileupload" accept="image/*" multiple="multiple">
+                            <button id="btnUploadAll" class="btn btn-success pull-right" type="button">
+                                Загрузить все файлы
+                            </button>
+                            <div class="clearfix">
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar" id="overallbar" style="width: 0%">
+                                </div>
                             </div>
                         </div>
                     </div>
+                        <div class="well hide" id="filelistholder">
+                        </div>
                 </div>
-                    <div class="well hide" id="filelistholder">
-                    </div>
-            </div>
-        </form>*@
+            </form>*@
 
 
 
@@ -71,39 +80,39 @@
 </div>
 
 
-@*@section scripts
+@section scripts
 {
-    <script type="text/javascript">
-        $(function () {
-            $('#fileupload').fileupload({
-                dataType: "json",
-                url: "/api/upload",
-                limitConcurrentUploads: 1,
-                sequentialUploads: true,
-                progressInterval: 100,
-                maxChunkSize: 10000,
-                add: function (e, data) {
-                    $('#filelistholder').removeClass('hide');
-                    data.context = $('<div />').text(data.files[0].name).appendTo('#filelistholder');
-                    $('</div><div class="progress"><div class="progress-bar" style="width:0%"></div></div>').appendTo(data.context);
-                    $('#btnUploadAll').click(function () {
-                        data.submit();
-                    });
-                },
-                done: function (e, data) {
-                    data.context.text(data.files[0].name + '... Completed');
-                    $('</div><div class="progress"><div class="progress-bar" style="width:100%"></div></div>').appendTo(data.context);
-                },
-                progressall: function (e, data) {
-                    var progress = parseInt(data.loaded / data.total * 100, 10);
-                    $('#overallbar').css('width', progress + '%');
-                },
-                progress: function (e, data) {
-                    var progress = parseInt(data.loaded / data.total * 100, 10);
-                    data.context.find('.progress-bar').css('width', progress + '%');
-                }
+    @*<script type="text/javascript">
+            $(function () {
+                $('#fileupload').fileupload({
+                    dataType: "json",
+                    url: "/api/upload",
+                    limitConcurrentUploads: 1,
+                    sequentialUploads: true,
+                    progressInterval: 100,
+                    maxChunkSize: 10000,
+                    add: function (e, data) {
+                        $('#filelistholder').removeClass('hide');
+                        data.context = $('<div />').text(data.files[0].name).appendTo('#filelistholder');
+                        $('</div><div class="progress"><div class="progress-bar" style="width:0%"></div></div>').appendTo(data.context);
+                        $('#btnUploadAll').click(function () {
+                            data.submit();
+                        });
+                    },
+                    done: function (e, data) {
+                        data.context.text(data.files[0].name + '... Completed');
+                        $('</div><div class="progress"><div class="progress-bar" style="width:100%"></div></div>').appendTo(data.context);
+                    },
+                    progressall: function (e, data) {
+                        var progress = parseInt(data.loaded / data.total * 100, 10);
+                        $('#overallbar').css('width', progress + '%');
+                    },
+                    progress: function (e, data) {
+                        var progress = parseInt(data.loaded / data.total * 100, 10);
+                        data.context.find('.progress-bar').css('width', progress + '%');
+                    }
+                });
             });
-        });
-    </script>
-}*@
+        </script>*@
+}
 
