--- a/FCGagarin.WebUI/Views/Photo/Edit.cshtml
+++ b/FCGagarin.WebUI/Views/Photo/Edit.cshtml
@@ -1,15 +1,20 @@
-﻿@model FCGagarin.WebUI.ViewModels.VideoFormModel
+﻿@model FCGagarin.WebUI.ViewModels.PhotoFormModel
 
 @{
-    ViewBag.Title = string.Format("Добавление видео в альбом \"{0}\"", Model.AlbumName);
+    ViewBag.Title = "Редактирование фото";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.AuthorId)
+        @Html.HiddenFor(model => model.AlbumId)
+
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
@@ -27,18 +32,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.VideoDate, htmlAttributes: new { @class = "control-label col-md-4" })
+            @Html.LabelFor(model => model.PathToImage, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                @Html.EditorFor(model => model.VideoDate, new { htmlAttributes = new { @class = "form-control datepicker" } })
-                @Html.ValidationMessageFor(model => model.VideoDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.PathToImage, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                @Html.ValidationMessageFor(model => model.PathToImage, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        @Html.HiddenFor(model=>model.AlbumId)
-
         <div class="form-group">
             <div class="col-md-offset-4 col-md-8">
-                <button type="submit" class="btn btn-default btn-lg">
+                <button type="submit" class="btn btn-default">
                     <i class="fa fa-check fa-lg"></i>
                 </button>
             </div>
@@ -47,5 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink(" ", "Details", "VideoAlbum", new { id = Model.AlbumId }, new { @class = "btn btn-default btn-lg fa fa-arrow-left fa-lg" })
+    @Html.ActionLink(" ", "Details", "PhotoAlbum", new { id = Model.AlbumId }, new { @class = "btn btn-default fa fa-arrow-left fa-lg" })
 </div>
+
+
