--- a/FCGagarin.WebUI/Views/PhotoAlbum/Index.cshtml
+++ b/FCGagarin.WebUI/Views/PhotoAlbum/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<FCGagarin.WebUI.ViewModels.VideoAlbumViewModel>
+﻿@model IEnumerable<FCGagarin.WebUI.ViewModels.PhotoAlbumViewModel>
 
 @{
-    ViewBag.Title = "Видеоальбомы";
+    ViewBag.Title = "Фотоальбомы";
 }
 
 @if (User.IsInRole("Moderator"))
@@ -27,7 +27,7 @@ else
             </div>
             <div class="text-muted h6">
                 <div>
-                    @Html.DisplayNameFor(m => m.NumberOfVideo):  @Html.DisplayFor(m => item.NumberOfVideo)
+                    @Html.DisplayNameFor(m => m.NumberOfPhoto):  @Html.DisplayFor(m => item.NumberOfPhoto)
                 </div>
                 <div>
                     @Html.DisplayNameFor(m => m.LastUploadDate):  @Html.DisplayFor(m => item.LastUploadDate)
@@ -43,7 +43,3 @@ else
         </div>
     }
 }
-
-
-
-
