--- a/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.WebUI/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                             <li role="presentation" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Галерея</a>
                                 <ul class="dropdown-menu">
-                                    <li class="disabled">@Html.ActionLink("Фото", "Index", "PhotoAlbum")</li>
+                                    <li>@Html.ActionLink("Фото", "Index", "PhotoAlbum")</li>
                                     <li>@Html.ActionLink("Видео", "Index", "VideoAlbum")</li>
                                 </ul>
                             </li>
