--- a/FCGagarin.PL.WebUI/Views/Photo/Edit.cshtml
+++ b/FCGagarin.PL.WebUI/Views/Photo/Edit.cshtml
@@ -23,13 +23,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Url, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
                 @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Url, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.PathToImage, htmlAttributes: new { @class = "control-label col-md-4" })
