--- a/FCGagarin.PL.WebUI/Views/Shared/_Layout.cshtml
+++ b/FCGagarin.PL.WebUI/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/dropzonescss")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://use.fontawesome.com/18dbca0590.js"></script>
 </head>
@@ -123,6 +124,7 @@
     @Scripts.Render("~/bundles/unobtrusive-ajax")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jquery-file-upload")
+    @Scripts.Render("~/bundles/dropzonescripts")
 
     @RenderSection("scripts", required: false)
 </body>
