--- a/FCGagarin.PL.WebUI/Views/Shared/_PhotoSummary.cshtml
+++ b/FCGagarin.PL.WebUI/Views/Shared/_PhotoSummary.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FCGagarin.PL.ViewModels.PhotoViewModel
 
 <div class="well">
-    <h4 class="well well-lg">@Html.DisplayFor(modelItem => item.Name)</h4>
-    @if (!string.IsNullOrEmpty(item.PathToImage))
+    <h4 class="well well-lg">@Html.DisplayFor(modelItem => Model.Name)</h4>
+    @if (!string.IsNullOrEmpty(Model.PathToImage))
     {
-        <img src="@Url.Content(item.PathToImage)" alt="pic" class="img-thumbnail center-block" />
+        <img src="@Url.Content(Model.PathToImage)" alt="pic" class="img-thumbnail center-block" />
     }
     <div class="text-muted h6">
         <div>
