--- a/FCGagarin.PL.WebUI/Views/PhotoAlbum/Create.cshtml
+++ b/FCGagarin.PL.WebUI/Views/PhotoAlbum/Create.cshtml
@@ -28,7 +28,7 @@
     </div>
 }
 
-
+@Html.Partial("_Files")
 
 
 
@@ -37,7 +37,7 @@
 </div>
 
 <!-- blueimp File Upload & Gallery styles -->
-@Styles.Render("~/Content/jQuery-File-Upload")
+@*@Styles.Render("~/Content/jQuery-File-Upload")*@
 
 @*<script>
 
@@ -52,21 +52,21 @@
             });
         });
     </script>*@
+@section scripts{
+    <script>
+        var $form = null;
+        $(function() {
 
-<script>
-    var $form = null;
-    $(function () {
+            $form = $('#fileupload').fileupload({
+                dataType: 'json'
+            });
 
-        $form = $('#fileupload').fileupload({
-            dataType: 'json'
         });
+        $('#fileupload').addClass('fileupload-processing');
 
-    });
-    $('#fileupload').addClass('fileupload-processing');
+    </script>
+}
 
-</script>
 
-@Html.Partial("_Files")
-
-@Scripts.Render("~/bundles/jQuery-File-Upload")
+@*@Scripts.Render("~/bundles/jQuery-File-Upload")*@
 
