--- a/FCGagarin.PL.WebUI/Views/Shared/_Files.cshtml
+++ b/FCGagarin.PL.WebUI/Views/Shared/_Files.cshtml
@@ -1,33 +1,31 @@
-﻿<h2>jQuery File Upload</h2>
-
-
+﻿
 <form id="fileupload" method="POST" enctype="multipart/form-data" data-url="@Url.Action("Upload","PhotoAlbum")">
     <div class="row fileupload-buttonbar">
-        <div class="col-lg-7">
+        <div class="col-lg-9">
             <!-- The fileinput-button span is used to style the file input field as button -->
             <span class="btn btn-success fileinput-button">
                 <i class="glyphicon glyphicon-plus"></i>
-                <span>Add files...</span>
+                <span>Выбрать файлы...</span>
                 <input type="file" name="files[]" multiple>
             </span>
             <button type="submit" class="btn btn-primary start">
                 <i class="glyphicon glyphicon-upload"></i>
-                <span>Start upload</span>
+                <span>Загрузить</span>
             </button>
             <button type="reset" class="btn btn-warning cancel">
                 <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel upload</span>
+                <span>Отменить загрузку</span>
             </button>
             <button type="button" class="btn btn-danger delete">
                 <i class="glyphicon glyphicon-trash"></i>
-                <span>Delete</span>
+                <span>Удалить</span>
             </button>
             <input type="checkbox" class="toggle">
             <!-- The global file processing state -->
             <span class="fileupload-process"></span>
         </div>
         <!-- The global progress state -->
-        <div class="col-lg-5 fileupload-progress fade">
+        <div class="col-lg-3 fileupload-progress fade">
             <!-- The global progress bar -->
             <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
                 <div class="progress-bar progress-bar-success" style="width:0%;"></div>
@@ -37,7 +35,7 @@
         </div>
     </div>
     <!-- The global progress state -->
-    <div class="col-lg-5 fileupload-progress fade">
+    <div class="col-lg-3 fileupload-progress fade">
         <!-- The global progress bar -->
         <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar progress-bar-success" style="width:0%;"></div>
@@ -77,12 +75,12 @@
             <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="progress-bar progress-bar-success" style="width:0%;"></div></div>
         </td>
         <td>
-            {% if (!i && !o.options.autoUpload) { %}
+            @*{% if (!i && !o.options.autoUpload) { %}
             <button class="btn btn-primary start" disabled>
                 <i class="glyphicon glyphicon-upload"></i>
                 <span>Start</span>
             </button>
-            {% } %}
+            {% } %}*@
             {% if (!i) { %}
             <button class="btn btn-warning cancel">
                 <i class="glyphicon glyphicon-ban-circle"></i>
